--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -395,8 +395,9 @@ The following activity and sequence diagram shows how the scheduling operation w
 
 image::SchedulingActivityDiagram.png[]
 
-image::
+image::SchedulingSequenceDiagram.png[]
 
+// end::Schedule[]
 === Logging
 
 We are using `java.util.logging` package for logging. The `LogsCenter` class is used to manage the logging levels and logging destinations.
