--- a/docs/team/sheryltay28.adoc
+++ b/docs/team/sheryltay28.adoc
@@ -48,4 +48,6 @@ include::../UserGuide.adoc[tag=lessons]
 |===
 
 include::../DeveloperGuide.adoc[tag=model]
+include::../DeveloperGuide.adoc[tag=Lesson]
+include::../DeveloperGuide.adoc[tag=Schedule]
 
